--- a/src/main/webapp/resources/dedicated/css/administrador/gerenciar-cliente.css
+++ b/src/main/webapp/resources/dedicated/css/administrador/gerenciar-cliente.css
@@ -1,6 +1,13 @@
 @CHARSET "ISO-8859-1";
 
+/* Div para lista de clientes */
+#lista-clientes {
+	overflow: scroll;
+	height: 450px;
+}
+
 /* Modal editar cliente */
 #modal-editar-cliente {
 	width: 20%;
 }
+
