--- a/src/main/webapp/resources/dedicated/css/administrador/index-administrador.css
+++ b/src/main/webapp/resources/dedicated/css/administrador/index-administrador.css
@@ -1,5 +1,15 @@
 @CHARSET "ISO-8859-1";
 
+body {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+}
+
+main {
+	flex: 1 0 auto;
+}
+
 /* Swipe's (Dashboard, Gerenciar e Agenda) */
 swipe-dashboard {
 	height: 1000px;
