--- a/src/main/webapp/resources/dedicated/css/administrador/login-administrador.css
+++ b/src/main/webapp/resources/dedicated/css/administrador/login-administrador.css
@@ -1,9 +1,20 @@
 @CHARSET "ISO-8859-1";
 
+body {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+}
+
+main {
+	flex: 1 0 auto;
+}
+
+/* Caixa principal de login */
 #cx-login-adm {
 	width: 100%;
-	height: 400px;
-	position: absolute; /*it can be fixed too*/
+	height: 68%;
+	position: absolute;
 	left: 0;
 	right: 0;
 	top: 0;
@@ -12,4 +23,10 @@
 	max-width: 100%;
 	max-height: 100%;
 	overflow: auto;
+	left: 0;
+}
+
+/* Botão de login */
+#btn-login-adm {
+	padding-top: 10%;
 }
