--- a/src/main/webapp/resources/dedicated/css/administrador/login-administrador.css
+++ b/src/main/webapp/resources/dedicated/css/administrador/login-administrador.css
@@ -12,21 +12,10 @@ main {
 
 /* Caixa principal de login */
 #cx-login-adm {
-	width: 100%;
-	height: 68%;
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	margin: auto;
-	max-width: 100%;
-	max-height: 100%;
-	overflow: auto;
-	left: 0;
+	padding: 2%;
 }
 
 /* Botão de login */
 #btn-login-adm {
-	padding-top: 10%;
+	margin-top: 18%;
 }
