--- a/src/main/webapp/resources/dedicated/css/administrador/gerenciar-agenda/gerenciar-agenda.css
+++ b/src/main/webapp/resources/dedicated/css/administrador/gerenciar-agenda/gerenciar-agenda.css
@@ -10,6 +10,11 @@ main {
 	flex: 1 0 auto;
 }
 
+/* Descrição de busca de agendamentos */
+#desc-nav-agendamento {
+	font-size: 11px;
+}
+
 /* Lista de agendamentos */
 #lista-agendamento li {
 	display: none;
