--- a/src/main/webapp/resources/dedicated/css/administrador/gerenciar-loja/gerenciar-fornecedor.css
+++ b/src/main/webapp/resources/dedicated/css/administrador/gerenciar-loja/gerenciar-fornecedor.css
@@ -10,8 +10,8 @@
 	display: none;
 }
 
-/* Descrição de pesquisa de fornecedor*/
-#desc-search-fornecedor {
+/* Descrição de busca de fornecedores */
+#desc-nav-fornecedor {
 	font-size: 11px;
 }
 
