--- a/src/main/webapp/resources/loja/css/social-buttons.css
+++ b/src/main/webapp/resources/loja/css/social-buttons.css
@@ -3,7 +3,6 @@
 
 #btnGoogle {
 	background-color: #de4c34;
-	font-family: 'Oswald'
 }
 
 #btnLogoGoogle {
@@ -12,9 +11,16 @@
 
 #btnFacebook {
 	background-color: #3b5998;
-	font-family: 'Oswald'
 }
 
 #btnLogoFacebook {
 	margin: -3px 25px -10px -40px;
+}
+
+#btnFacebook:hover {
+	background-color: #20396d;
+}
+
+#btnGoogle:hover {
+	background-color: #a02f1c;
 }
