--- a/src/main/webapp/resources/loja/css/style.css
+++ b/src/main/webapp/resources/loja/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Didact+Gothic');
+
 * {
 	margin: 0;
 	padding: 0;
@@ -10,8 +12,20 @@ html, body {
 body {
 	color: black;
 	background-color: #dedede;
-	font-family: Century Gothic;
+	font-family: 'Century Gothic', 'Didact Gothic';
 	overflow-y: hidden;
+}
+
+.sv {
+	padding: 2em;
+}
+
+.sv img {
+	margin-left: 30%;
+}
+
+.sv h2 {
+	text-align: center;;
 }
 
 body {
@@ -69,6 +83,11 @@ header {
 .totalP ul {
 	padding: 0.2em;
 	list-style: none;
+}
+
+.totalP {
+	background-color: white;
+	display: inline-block;
 }
 
 .cxAvatar #ul {
@@ -165,6 +184,14 @@ header {
 	background-color: #dedede;
 }
 
+#linha {
+	display: none;
+}
+
+.btns {
+	margin-top: 1em;
+}
+
 .totalP li:hover {
 	background-color: #dedede;
 	cursor: pointer;
@@ -201,6 +228,7 @@ header {
 }
 
 .sb {
+	min-height: 2em;
 	cursor: pointer;
 }
 
@@ -217,11 +245,13 @@ header {
 }
 
 .imgProduto img {
+	width: 140px;
+	height: auto;
 	max-width: 100%;
 }
 
 .imgdg {
-	max-width: 10em;
+	max-width: 4em;
 }
 
 .avatar {
@@ -248,7 +278,7 @@ header {
 	float: left;
 	border: none;
 	color: white;
-	font-family: "Century Gothic";
+	font-family: 'Century Gothic', 'Didact Gothic';
 	background-image: linear-gradient(to right, #5c4033, #7e5745);
 }
 
@@ -268,7 +298,7 @@ header {
 
 #textarea1 {
 	font-size: 16px;
-	font-family: Century Gothic;
+	font-family: 'Century Gothic', 'Didact Gothic';
 	color: black;
 }
 
@@ -288,7 +318,7 @@ header {
 	border: none;
 	color: white;
 	cursor: pointer;
-	font-family: Century Gothic;
+	font-family: 'Century Gothic', 'Didact Gothic';
 	margin-left: 30%;
 	background-color: #005900;
 }
@@ -306,6 +336,7 @@ header {
 	border-top: #770505 solid 4px;
 	background-color: white;
 	padding: 0.5em;
+	min-height: 15em;
 }
 
 .descricaoProd h2 {
@@ -326,7 +357,7 @@ header {
 	width: 45%;
 	border: none;
 	font-size: 12px;
-	font-family: Century Gothic;
+	font-family: 'Century Gothic', 'Didact Gothic';
 	color: white;
 	cursor: pointer;
 }
@@ -356,31 +387,31 @@ header {
 }
 
 .produtos {
-	border-bottom: solid 3px #6e0000;
 	padding: 10px;
-	background-image: linear-gradient(to right, #f3f3f3, #f1f1f1, #ffffff);
-	font-weight: bold;
-	margin-top: -10px;
-	color: #323232;
+	background-color: #614336;
+	color: white;
 	font-size: 20px;
+	border-bottom: solid 5px #770505;
 }
 
 .p {
-	height: 7.5em;
-}
-
-.p:hover {
-	background-color: #d1d1d1;
+	padding: 0.8em;
+	margin: 0;
 }
 
 .p img {
-	max-width: 45%;
-	padding: 10px;
-	float: left;
+	height: auto;
+	width: auto;
+	max-width: 164px;
+	max-height: 164px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 }
 
 .p p {
-	font-size: 25px;
+	height: 60px;
+	font-size: 14px;
 	padding-top: 0.5em;
 }
 
@@ -477,7 +508,7 @@ header {
 
 .menu h3 {
 	float: left;
-	font-family: Century Gothic;
+	font-family: 'Century Gothic', 'Didact Gothic';
 	color: black;
 	font-size: 19px;
 	width: 60%;
@@ -516,8 +547,8 @@ menu li a:hover {
 }
 
 /*
-	Aqui vocÃª esconde o menu para fora da tela 
-	O valor Ã© exatamente a largura da sidebar
+	Aqui você esconde o menu para fora da tela 
+	O valor é exatamente a largura da sidebar
 */
 menu {
 	-webkit-transform: translateX(-400px);
@@ -531,7 +562,7 @@ menu {
 }
 
 /*
-	Essa Ã© a posiÃ§Ã£o original do HEADER e do MAIN
+	Essa é a posição original do HEADER e do MAIN
 */
 header, .main, .total {
 	-webkit-transform: translateX(0);
@@ -752,6 +783,15 @@ footer {
 		.cxAvatar .menuu {
 			margin-top: 5em;
 		}
+		.totalP {
+			margin-left: 5%;
+		}
+		.sv img {
+			margin-left: 40%;
+		}
+		.sv p {
+			text-align: center;
+		}
 	}
 	@media screen and (min-width: 715px) {
 		.redes {
@@ -785,12 +825,43 @@ footer {
 		.input-field {
 			margin-left: 44em;
 		}
+		.totalP {
+			margin-left: 13%;
+		}
 	}
 	@media screen and (min-width: 814px) {
 		.search {
 			width: 50%;
 			margin-left: 10em;
 			margin-top: 0.4em;
+		}
+		#lip {
+			margin-left: 0.2px;
+		}
+		.sv:hover {
+			transition: 1.2s;
+			background-color: #dedede;
+		}
+		.sv img {
+			margin-left: 35%;
+		}
+		.sv {
+			width: 40%;
+		}
+		.sv p {
+			text-align: justify;
+		}
+		#textSv {
+			float: right;
+		}
+		#linha {
+			display: block;
+			height: 3em;
+			width: 100%;
+		}
+		.btns {
+			margin-top: 3em;
+			margin-left: 50%;
 		}
 		.totalP .cx05 {
 			margin-left: 11em;
@@ -889,28 +960,29 @@ footer {
 		}
 		.p {
 			height: 23em;
-			width: 17em;
+			width: 15em;
 			float: left;
+			border-left: solid 1px white;
+			border-right: solid 1px white;
+		}
+		.p:hover {
+			transition: 0.8s;
+			border-left: solid 1px #d1d1d1;
+			border-right: solid 1px #d1d1d1;
 		}
 		br {
 			display: none;
 		}
-		.p:hover {
-			background-color: #d1d1d1;
-		}
 		.p img {
-			padding: 15px;
 			max-width: none;
-			padding-left: 1em;
 		}
 		.p p {
-			font-size: 23px;
+			font-size: 17px;
 			padding: 0.5em;
 		}
 		.p h2 {
-			margin-left: 0.5em;
-			margin-top: -0.4em;
-			padding-right: 1em;
+			margin-top: 0.4em;
+			padding-right: 0.8em;
 			text-align: right;
 		}
 		.page-footer {
@@ -991,7 +1063,7 @@ footer {
 		}
 		.totalP {
 			width: 90%;
-			margin-left: -0.2em;
+			margin-left: 5%;
 			border-left: solid 5px #d2d2d2;
 			border-right: solid 5px #d2d2d2;
 		}
@@ -1074,7 +1146,6 @@ footer {
 		.totalP {
 			border-left: solid 5px #d2d2d2;
 			border-right: solid 5px #d2d2d2;
-			margin-left: -0.3em;
 		}
 		.imgProduto {
 			margin-top: 1em;
@@ -1107,9 +1178,6 @@ footer {
 		margin-left: 3%;
 		width: 90%;
 	}
-	.descricaoProd {
-		
-	}
 	.p {
 		margin-left: 2%;
 	}
@@ -1120,11 +1188,18 @@ footer {
 	}
 	#nomeClienteHeader {
 		display: block;
-		margin-left: 75%;
-		margin-top: 0.9em;
-		width: auto;
+		margin-left: 77%;
+		margin-top: 1em;
+		width: 15%;
 		font-weight: bold;
 		font-size: 16px;
+		font-weight: bold;
+	}
+	.dc {
+		margin-left: 23%;
+	}
+	.sv img {
+		margin-left: 40%;
 	}
 }
 
@@ -1139,7 +1214,7 @@ footer {
 
 @media screen and (min-width: 1100px) {
 	#nomeClienteHeader {
-		margin-left: 70%;
+		margin-left: 75%;
 	}
 	.p {
 		margin-left: 0;
@@ -1178,25 +1253,34 @@ footer {
 	.cxAvatar #form {
 		margin-left: 35%;
 	}
+	.sv img {
+		margin-left: 40%;
+	}
+	#nomeClienteHeader {
+		margin-left: 75%;
+	}
 }
 
 @media screen and (min-width: 1410px) {
 	.totalP {
-		margin-left: 15%;
+		margin-left: 5%;
+	}
+	#nomeClienteHeader {
+		margin-left: 70%;
+		width: 18%;
+		margin-top: 1em;
 	}
 }
 
 @media screen and (min-width: 1500px) {
 	.totalP {
-		margin-left: auto;
-		margin-right: auto;
-		width: 67%;
+		margin-left: 5%;
 	}
 }
 
 @media screen and (min-width: 1610px) {
 	.cxAvatar {
-		width: 60%;
+		width: 70%;
 	}
 	.cxAvatar #form {
 		margin-left: 36%;
@@ -1234,7 +1318,7 @@ footer {
 	}
 	.menu p {
 		float: none;
-		font-family: Century Gothic;
+		font-family: 'Century Gothic', 'Didact Gothic';
 		color: black;
 		width: auto;
 		padding: 6px;
@@ -1243,6 +1327,7 @@ footer {
 		width: 70%;
 		border-left: solid 5px #d2d2d2;
 		border-right: solid 5px #d2d2d2;
+		margin-left: 15%;
 	}
 	.imgProduto {
 		margin-top: 1.5em;
@@ -1254,6 +1339,6 @@ footer {
 		margin-left: 1.5%;
 	}
 	#prodd {
-		width: 20%;
+		width: 15em;
 	}
 }
