--- a/src/main/webapp/resources/loja/css/style.css
+++ b/src/main/webapp/resources/loja/css/style.css
@@ -245,9 +245,12 @@ header {
 }
 
 .imgProduto img {
-	width: 140px;
 	height: auto;
-	max-width: 100%;
+	width: auto;
+	max-width: 200px;
+	max-height: 200px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .imgdg {
@@ -255,7 +258,10 @@ header {
 }
 
 .avatar {
-	max-width: 35%;
+	width: auto;
+	height: auto;
+	max-width: 164px;
+	max-height: 164px;
 	padding: 0.5em;
 	float: left;
 }
