--- a/src/main/webapp/resources/loja/css/sobre-nos.css
+++ b/src/main/webapp/resources/loja/css/sobre-nos.css
@@ -1,5 +1,10 @@
 @CHARSET "ISO-8859-1";
 
+/* Body hidden */
+body {
+	display: none;
+}
+
 /* Parallax Height */
 #banner-sobre-nos {
 	width: auto;
