--- a/src/main/webapp/resources/loja/css/style.css
+++ b/src/main/webapp/resources/loja/css/style.css
@@ -1016,6 +1016,7 @@ footer {
 		float: left;
 		border-left: solid 1px white;
 		border-right: solid 1px white;
+		transition: 0.6s;
 	}
 	.p:hover {
 		transition: 0.8s;
